Fix mesa item list text overflow

--- a/src/styles/Mesas.scss
+++ b/src/styles/Mesas.scss
@@ -261,12 +261,15 @@ span.option-button {
           align-items: flex-start;
           font-size: 13px;
           span.text {
+            cursor: default;
             line-height: 1.3;
             overflow: hidden;
             white-space: nowrap;
             align-self: flex-start;
             font-weight: 400;
             color: black;
+            text-overflow: ellipsis;
+            width: 100%;
             &.mesa-type {
               text-transform: capitalize;
             }
